--- a/scss/all/_helpYou.scss
+++ b/scss/all/_helpYou.scss
@@ -1,7 +1,5 @@
 #help_you{
     .container{
-      .section{
-        position: relative;
         .help_you{
             margin-bottom: 80px;
             h4{
@@ -48,432 +46,46 @@
                 }
             }
         }
+    }
+}
 
-        .choise_our{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            .choise-left{
-                width: 560px;
+@media only screen and (max-width: 390px) {
+    #help_you{
+        padding-top: 50px;
+        .container{
+            .help_you{
+                padding:  0 10px;
                 h4{
-                    color: var(--Base-Black, #140A32);
-                    font-size: 32px;
-                    font-style: normal;
-                    font-weight: 700;
-                    line-height: normal;
-                    letter-spacing: -0.96px;
-                    margin-bottom: 20px;
-                }
-
-                p{
-                    color: var(--Base-Black, #140A32);
-                    font-size: 16px;
-                    font-style: normal;
-                    font-weight: 400;
-                    line-height: 160%; /* 25.6px */
-                    margin-bottom: 30px;
+                    font-size: 20px !important; 
                 }
 
                 ul{
-                    width: 469px;
-                    display: flex;
-                    justify-content: space-between;
                     li{
-                        h5{
-                            color: var(--green, #33836E);
-                            font-size: 28px;
-                            font-style: normal;
-                            font-weight: 700;
-                            line-height: normal;
-                            letter-spacing: -0.84px;
-                            margin-bottom: 10px;
-                        }
-
-                        p{
-                            margin: 0;
-                            color: var(--Base-Black, #140A32);
-                            font-size: 16px;
-                            font-style: normal;
-                            font-weight: 400;
-                            line-height: normal;
-                        }
-                    }
-                }
-            }
-        }
-
-        .hot_linii{
-            border-radius: 20px;
-            background: var(--green, #33836E);
-            display: flex;
-            justify-content: space-between;
-            height: 200px;
-            padding: 31px 60px;
-
-            .hot_linii-left{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                width: 296px;
-                p{
-                    color: var(--Base-White, #FFF);
-                    font-size: 24px;
-                    font-style: normal;
-                    font-weight: 600;
-                    line-height: normal;
-                }
-
-                h5{
-                    color: var(--Base-White, #FFF);
-                    font-size: 42px;
-                    font-style: normal;
-                    font-weight: 700;
-                    line-height: normal;
-                    letter-spacing: -1.26px;
-                }
-            }
-
-            .hot_linii-right{
-                width: 501px;
-                h5{
-                    color: var(--Base-White, #FFF);
-                    font-size: 18px;
-                    font-style: normal;
-                    font-weight: 700;
-                    line-height: normal;
-                    margin-bottom: 16px;
-                }
-
-                div{
-                    display: flex;
-                    gap: 15px;
-                    margin-bottom: 22px;
-                    div{
-                        margin-bottom: 0;
-                        position: relative;
-                        display: flex;
+                        padding: 20px !important;
+                        gap: 15px;
                         flex-direction: column;
-                        background: white;
-                        border-radius: 10px;
-                        input{
-                            width: 100%;
-                            height: 100%;
-                            border: none;
-                            border-radius: 10px;
-                            font-size: 16px;
-                            font-style: normal;
-                            font-weight: 400;
-                            line-height: normal;
-                            color: var(--Base-Black, #140A32);
-                            padding-top: 26px;
-                            outline: none;
-                            padding-left: 10px;
-                            padding-right: 10px;
-                            padding-bottom: 10px;
-                            color: var(--Base-Black, #140A32);
-                            font-size: 16px;
-                            font-style: normal;
-                            font-weight: 400;
-                            line-height: normal;
+                        align-items: start;
+                        height: 196px !important; 
+
+                        span{
+                            display: flex !important;
+                            padding: 10px !important;
+                            align-items: start !important;
+                            gap: 10px !important;
+                            margin-bottom: 0 !important;
+
+                            svg{
+                                width: 24px !important;
+                                height: 24px !important;
+                            }
                         }
 
                         p{
-                            top: 5px;
-                            left: 10px;
-                            position: absolute;
-                            color: var(--Gray-Low, rgba(47, 43, 67, 0.40));
-                            font-size: 12px;
-                            font-style: normal;
-                            font-weight: 400;
-                            line-height: normal;
+                            font-size: 14px !important;
                         }
                     }
-
-                    button{
-                        color: var(--Base-White, #FFF);
-                        text-align: center;
-                        font-size: 16px;
-                        font-style: normal;
-                        font-weight: 600;
-                        line-height: normal;
-                        border-radius: 10px;
-                        border: 1px solid var(--Base-White, #FFF);
-                        padding: 16px 36px 18px 36px;
-                        background: transparent;
-                        cursor: pointer;
-                    }
-                }
-
-                p:last-child{
-                    a{
-                        color: rgba(255, 255, 255, 0.50);
-                        font-size: 12px;
-                        font-style: normal;
-                        font-weight: 600;
-                        line-height: normal;
-                        text-decoration-line: underline;
-                    }
                 }
             }
         }
-
-        .our_yurist{
-            margin-top: 80px;
-            h5{
-                color: var(--Base-Black, #140A32);
-                font-size: 32px;
-                font-style: normal;
-                font-weight: 700;
-                line-height: normal;
-                letter-spacing: -0.96px;
-                margin-bottom: 29px;
-            }
-
-            ul{
-                display: flex;
-                justify-content: space-between;
-                flex-wrap: wrap;
-                gap: 20px;
-
-                li{
-                    border-radius: 20px;
-                    border: 1px solid var(--Gray-Borders, rgba(47, 43, 67, 0.15));
-                    display: flex;
-                    width: 560px;
-                    height: 287px;
-                    padding: 20px;
-                    flex-direction: column;
-                    align-items: flex-start;
-                    gap: 15px;
-                    flex-shrink: 0;
-
-                    div{
-                        display: flex;
-                        align-items: center;
-                        gap: 25px;
-
-                        p{
-                            color: var(--Base-Black, #140A32);
-                            font-size: 16px;
-                            font-style: normal;
-                            font-weight: 600;
-                            line-height: normal;
-                        }
-                    }
-
-                    p{
-                        color: var(--Gray-High, rgba(47, 43, 67, 0.70));
-                        font-size: 14px;
-                        font-style: normal;
-                        font-weight: 400;
-                        line-height: 150%; /* 21px */
-                    }
-                }
-            }
-        }
-
-        .call_we{
-            margin-bottom: 20px;
-            position: relative;
-            overflow: hidden;
-            padding-right: 117px;
-            margin-top: 20px;
-            display: flex;
-            border-radius: 20px;
-            background: var(--green, #33836E);
-            justify-content: space-between;
-
-            img:first-child{
-                z-index: 99;
-                    margin-left: 36px;
-            }
-
-            div:nth-child(2){
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                width: 334px;
-                flex-direction: column;
-
-
-                h5{
-                    color: var(--Base-White, #FFF);
-                    font-size: 24px;
-                    font-style: normal;
-                    font-weight: 600;
-                    line-height: normal;
-                }
-
-                h4{
-                    color: var(--Base-White, #FFF);
-                    font-size: 42px;
-                    font-style: normal;
-                    font-weight: 700;
-                    line-height: normal;
-                    letter-spacing: -1.26px;
-                }
-            }
-
-            div:nth-child(3){
-                margin-left: 86px;
-                width: 260px;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                p{
-                    color: var(--Base-White, #FFF);
-                    text-align: center;
-                    font-size: 18px;
-                    font-style: normal;
-                    font-weight: 600;
-                    line-height: normal;
-                    margin-bottom: 20px;
-                }
-                img{
-                    cursor: pointer;
-                }
-            }
-
-            .color{
-                    top: 31px;
-                    left: -130px;
-                    position: absolute;
-                    width: 399px;
-                    height: 399px;
-                    border-radius: 399px;
-                    background: rgba(20, 10, 50, 0.20);
-            }
-        }
-        .quessions_we{
-            width: 100%;
-            top: 2650px;
-            position: absolute;
-            padding-left: 51px;
-            padding-right: 36px;
-            display: flex;;
-            justify-content: space-between;
-            align-items: center;
-            border-radius: 20px;
-            background: var(--Gray-Background, rgba(47, 43, 67, 0.04));
-            h4{
-                width: 295px;
-                color: var(--Base-Black, #140A32);
-                font-size: 32px;
-                font-style: normal;
-                font-weight: 700;
-                line-height: normal;
-                letter-spacing: -0.96px;
-            }
-            div{
-                display: flex;
-                gap: 15px;
-                margin-bottom: 22px;
-                div{
-                    margin-bottom: 0;
-                    position: relative;
-                    display: flex;
-                    flex-direction: column;
-                    background: white;
-                    border-radius: 10px;
-                    input{
-                        width: 100%;
-                        height: 100%;
-                        border: none;
-                        border-radius: 10px;
-                        font-size: 16px;
-                        font-style: normal;
-                        font-weight: 400;
-                        line-height: normal;
-                        color: var(--Base-Black, #140A32);
-                        padding-top: 26px;
-                        outline: none;
-                        padding-left: 10px;
-                        padding-right: 10px;
-                        padding-bottom: 10px;
-                        color: var(--Base-Black, #140A32);
-                        font-size: 16px;
-                        font-style: normal;
-                        font-weight: 400;
-                        line-height: normal;
-                    }
-
-                    p{
-                        top: 5px;
-                        left: 10px;
-                        position: absolute;
-                        color: var(--Gray-Low, rgba(47, 43, 67, 0.40));
-                        font-size: 12px;
-                        font-style: normal;
-                        font-weight: 400;
-                        line-height: normal;
-                    }
-                }
-
-                button{
-                    color: var(--Base-White, #FFF);
-                    text-align: center;
-                    font-size: 16px;
-                    font-style: normal;
-                    font-weight: 600;
-                    line-height: normal;
-                    border-radius: 10px;
-                    border: 1px solid var(--Base-White, #FFF);
-                    padding: 16px 36px 18px 36px;
-                    background: #33836E;
-                    cursor: pointer;
-                }
-            }
-        }
-
-        .seo-wrapper{
-            padding-top: 200px;
-            margin-bottom: 90px;
-            h4{
-                color: var(--Base-Black, #140A32);
-                font-size: 32px;
-                font-style: normal;
-                font-weight: 700;
-                line-height: normal;
-                letter-spacing: -0.96px;
-                margin-bottom: 20px;
-            }
-
-            p{
-                color: var(--Base-Black, #140A32);
-                font-size: 16px;
-                font-style: normal;
-                font-weight: 400;
-                line-height: 160%; /* 25.6px */
-                margin-bottom: 20px;
-            }
-
-           div{
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 10px;
-            background: #E0ECE9;
-            border-radius: 10px;
-            cursor: pointer;
-            a{
-                color: var(--green, #33836E);
-                text-align: center;
-                font-size: 16px;
-                font-style: normal;
-                font-weight: 600;
-                line-height: normal;
-                border-radius: 10px;
-                background: #E0ECE9;
-                padding: 16px 36px 18px 36px;
-            }
-           }
-        }
-    
-      }
-
     }
 }
