--- a/scss/all/_main.scss
+++ b/scss/all/_main.scss
@@ -1,3 +1,10 @@
 @import "./intro";
 @import "./yurudikhelp";
 @import "./helpYou";
+@import "./choiseOur";
+@import "./hotlinii";
+@import "./ourYurist";
+@import "./callWe";
+@import "./quessionsWe";
+@import "./seoWrapper";
+@import "./ourClients";
